# typed-fsm

./: .gitignore  CHANGELOG.md  CI-LOCAL-README.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  SECURITY.md  ci-local.sh  install-hooks.sh
.github/workflows/: ci.yml
coverage/: cobertura.xml
examples/: avr_blink.rs  blink.rs  concurrent_isr.rs  concurrent_threads.rs  connection.rs  guards.rs  hierarchical.rs  logging.rs  motor.rs  timeouts.rs  traffic_intersection.rs  traffic_light.rs
hooks/: pre-commit
src/: fsm.rs  lib.rs
tests/: concurrent_tests.rs  coverage_tests.rs  edge_cases_tests.rs  guards_tests.rs  integration_tests.rs  logging_tests.rs  timeouts_tests.rs
