[package]
name = "typed-fsm"
version = "0.3.0"
edition = "2021"
authors = ["Afonso Miguel"]
description = "A lightweight, zero-cost, event-driven finite state machine microframework for Rust"
readme = "README.md"
repository = "https://github.com/afmiguel/typed-fsm"
license = "MIT OR Apache-2.0"
keywords = ["fsm", "state-machine", "embedded", "event-driven", "no-std"]
categories = ["embedded", "no-std", "data-structures"]

[lib]
name = "typed_fsm"
path = "src/lib.rs"

[[example]]
name = "motor"
path = "examples/motor.rs"

[[example]]
name = "traffic_light"
path = "examples/traffic_light.rs"

[[example]]
name = "connection"
path = "examples/connection.rs"

[[example]]
name = "guards"
path = "examples/guards.rs"

[[example]]
name = "logging"
path = "examples/logging.rs"

[[example]]
name = "timeouts"
path = "examples/timeouts.rs"

[features]
default = []
logging = ["log"]

[dependencies]
# Optional logging support
log = { version = "0.4", optional = true }

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
